Bug 376086 - Shift + Clicking a layer eye icon does not hide other layers
Summary: Shift + Clicking a layer eye icon does not hide other layers
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: unspecified
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-06 06:12 UTC by Michel T Gonzalez
Modified: 2019-07-08 14:59 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michel T Gonzalez 2017-02-06 06:12:44 UTC
From the documentation ( https://docs.krita.org/Layers#Hot_keys_and_Sticky_Keys ):
"Shift + left mouse button on the eye-icon for hidding all but the current layer."

This feature is broken as Shift + LMB on the eye icon hides the current layer as if the key modifier had no effect.

Tested on Krita 3.1.2 (64-bit) on Windows 7 64-bit: Stacked a few brush stroke layers, selected one layer and tried the key combination on the eye icon.
Comment 1 Halla Rempt 2017-02-07 08:45:34 UTC
I wonder when this broke, and whether it broke when we started using shift-click to select multiple layers, but it is broken...
Comment 2 wolthera 2017-02-07 17:52:56 UTC
(In reply to Boudewijn Rempt from comment #1)
> I wonder when this broke, and whether it broke when we started using
> shift-click to select multiple layers, but it is broken...

I think it disappeared with the new layers docker.
Comment 3 Scott Petrovic 2017-03-14 15:41:13 UTC
I was talking with Dmitry and it sounds like this was removed as Wolthera pointed out. It also sounds like it wasn't working correctly before as well. The behavior should be the following:

1. Shift + Clicking an eye icon on a layer hides all layers except the one  clicked on
2. Shift + Clicking an eye icon again will restore the layers to its previous state

It doesn't sound like there is a state management right now for the layers, so there isn't a way to restore the layer visibility to what it was previously. That will have to be added as well with this.
Comment 4 vanyossi 2019-05-24 04:58:31 UTC
I made an implementation (currrently on merge request) But now Im doubtfull this feature make sense when "isolate layer" does something very similar.

The shift + click on the patch hides all layers except the layers needed for the  clicked layer to be visible (it will not hide their children also). A scon dclick restores the state as it was before. However because there are some other eyes present dmitry found it very confusing.

I don't know how this feature is supposed to look, should we disable all eye icons except the one that was clicked?
Comment 5 vanyossi 2019-06-23 16:51:03 UTC
Current patch in revision

https://invent.kde.org/kde/krita/merge_requests/5
Comment 6 vanyossi 2019-06-28 13:27:32 UTC
Git commit 1b156600aac2e42942bf1772b9c418d155061fc4 by Ivan Yossi.
Committed on 28/06/2019 at 13:26.
Pushed by ivany into branch 'master'.

Enable Shift + Click to show only current layer

Differential Revision: https://phabricator.kde.org/D20591

M  +159  -55   plugins/dockers/layerdocker/NodeDelegate.cpp

https://invent.kde.org/kde/krita/commit/1b156600aac2e42942bf1772b9c418d155061fc4
Comment 7 Halla Rempt 2019-07-08 14:59:28 UTC
Git commit 1ed14db7a6e32031cffb98d97634360d9d52a197 by Boudewijn Rempt, on behalf of Ivan Yossi.
Committed on 08/07/2019 at 14:59.
Pushed by rempt into branch 'krita/4.2'.

Enable Shift + Click to show only current layer

Differential Revision: https://phabricator.kde.org/D20591

M  +159  -55   plugins/dockers/layerdocker/NodeDelegate.cpp

https://invent.kde.org/kde/krita/commit/1ed14db7a6e32031cffb98d97634360d9d52a197