Enable Shift + Click to show only current layer

Differential Revision: https://phabricator.kde.org/D20591

BUG:376086